[gd_scene load_steps=34 format=3 uid="uid://dno8mx1xvxa3u"]

[ext_resource type="Script" path="res://GameScenes/menu.gd" id="1_4100c"]
[ext_resource type="Texture2D" uid="uid://cq7v0oi5ekfhx" path="res://UI/Images/Wood_Sign.png" id="3_ieqqp"]
[ext_resource type="Texture2D" uid="uid://bc4jvv6p7hubk" path="res://UI/Images/Metal_Sign.png" id="4_b6k4m"]
[ext_resource type="PackedScene" uid="uid://d0qiy71atm05d" path="res://UI/MainUI.tscn" id="4_s4rov"]
[ext_resource type="Texture2D" uid="uid://bdf6brod66ctp" path="res://Environment/IceChunkWall.png" id="5_526l2"]
[ext_resource type="PackedScene" uid="uid://bgsmy6ouxtl1e" path="res://Environment/IcePillar.tscn" id="5_sv0kb"]
[ext_resource type="PackedScene" uid="uid://da4v6pn7rkjeu" path="res://Environment/Wave.tscn" id="6_4nit6"]
[ext_resource type="Texture2D" uid="uid://dyw5fqsbuejfo" path="res://Environment/Sky.png" id="7_5euwb"]
[ext_resource type="Texture2D" uid="uid://c55lo6ocegua1" path="res://Environment/Sun.png" id="8_nnqvf"]
[ext_resource type="Texture2D" uid="uid://bj2gewdwdcxv5" path="res://Environment/Moon.png" id="9_j3epq"]
[ext_resource type="PackedScene" uid="uid://bilt772qof1fb" path="res://geode_spawner.tscn" id="10_a1o20"]
[ext_resource type="PackedScene" uid="uid://haq5aggch3tu" path="res://UI/BuildingPurchase.tscn" id="11_bjy00"]
[ext_resource type="PackedScene" uid="uid://cgjyouhq6o660" path="res://Buildings/Grinder/Chute.tscn" id="12_a7qww"]
[ext_resource type="PackedScene" uid="uid://07w8hopuanew" path="res://Buildings/Mines/GeodeMine.tscn" id="13_br4a5"]
[ext_resource type="PackedScene" uid="uid://c3c18hfl6go6i" path="res://Geodes/GeodeVals.tscn" id="14_31rgm"]
[ext_resource type="Texture2D" uid="uid://bf7a4em7j87u" path="res://UI/Images/Logo_Bkgd.png" id="15_54i4g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_de5pp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_rt7s3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_juvt5"]
resource_name = "bounce_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_p6rts"]
resource_name = "bounce_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.1, 1.1), Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_diind"]
_data = {
"RESET": SubResource("Animation_rt7s3"),
"bounce_down": SubResource("Animation_juvt5"),
"bounce_up": SubResource("Animation_p6rts")
}

[sub_resource type="LabelSettings" id="LabelSettings_irf0p"]
font_size = 12
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7sfhv"]
font_size = 23

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bn21j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ds8ej"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02x1q"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhnb0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmoqm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="GDScript" id="GDScript_3u6ko"]
script/source = "extends ParallaxBackground

@onready var sun_path = $Sun/Path2D/PathFollow2D
@onready var sun_img = $Sun/Path2D/PathFollow2D/Sun
@onready var moon_img = $Sun/Path2D/PathFollow2D/Moon

@onready var sky_img = $Sky/TextureRect

@export var sun_arc_duration = 60
@onready var curr_arc = randf() * sun_arc_duration / 2

@export var day_gradient : Gradient
@export var night_gradient : Gradient

var day = true

func _process(delta):	
	curr_arc += delta
	if curr_arc >= sun_arc_duration:
		curr_arc = 0
		day = !day
		sun_img.visible = day
		moon_img.visible = !day
		
	var t = curr_arc / sun_arc_duration
	sun_path.progress_ratio = t
	sky_img.self_modulate = day_gradient.sample(t) if day else night_gradient.sample(t)
"

[sub_resource type="Gradient" id="Gradient_7v57w"]
offsets = PackedFloat32Array(0, 0.0981595, 0.497143, 0.901841, 1)
colors = PackedColorArray(0.104524, 0.104524, 0.547521, 1, 0, 0.591339, 1, 1, 0.177751, 0.667334, 1, 1, 0, 0.487689, 0.819067, 1, 0, 0, 0.490196, 1)

[sub_resource type="Gradient" id="Gradient_j1lg6"]
offsets = PackedFloat32Array(0, 0.349693, 0.895706, 1)
colors = PackedColorArray(0, 0, 0.490196, 1, 0, 0.010952, 0.201299, 1, 0, 0.00392157, 0.270588, 1, 0.105882, 0.105882, 0.54902, 1)

[sub_resource type="Curve2D" id="Curve2D_pcspu"]
_data = {
"points": PackedVector2Array(148.489, 166.291, -150, -150, 800, 300, 300, 0, -300, 0, 0, 30, 150, -150, -423.002, 257.863, -800, 300)
}
point_count = 3

[sub_resource type="GDScript" id="GDScript_587t3"]
script/source = "extends Sprite2D

@export var max_rot : float
@export var rot_time : float
var dr = 1

@export var min_scale : float
@export var max_scale : float
@export var scale_time : float
var ds = 1

var t = 0.

func _process(delta):
	t += delta
	
	var r = sin(t * PI / rot_time) * max_rot
	rotation_degrees = r
	
	var s = min_scale + (max_scale - min_scale) * (sin(t * PI / scale_time) + 1) / 2
	scale = Vector2(s, s)
"

[node name="Menu" type="Node2D"]
script = ExtResource("1_4100c")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(92, 112)
zoom = Vector2(1.24, 1.24)
limit_left = -1000
limit_top = -300
limit_right = 1000
limit_bottom = 5000
editor_draw_limits = true

[node name="NewButton" type="Button" parent="Camera2D"]
z_index = 100
offset_left = -308.0
offset_top = 110.0
offset_right = -149.0
offset_bottom = 152.0
pivot_offset = Vector2(79, 21)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/hover = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/focus = SubResource("StyleBoxFlat_de5pp")
text = "New Game"

[node name="TextureRect" type="TextureRect" parent="Camera2D/NewButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ieqqp")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/NewButton"]
speed_scale = 4.0
libraries = {
"": SubResource("AnimationLibrary_diind")
}

[node name="ContButton" type="Button" parent="Camera2D"]
z_index = 100
offset_left = -79.0
offset_top = 110.0
offset_right = 80.0
offset_bottom = 152.0
pivot_offset = Vector2(79, 21)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/hover = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/focus = SubResource("StyleBoxFlat_de5pp")
text = "Continue"

[node name="TextureRect" type="TextureRect" parent="Camera2D/ContButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ieqqp")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/ContButton"]
speed_scale = 4.0
libraries = {
"": SubResource("AnimationLibrary_diind")
}

[node name="QuitButton" type="Button" parent="Camera2D"]
z_index = 100
offset_left = 150.0
offset_top = 110.0
offset_right = 309.0
offset_bottom = 152.0
pivot_offset = Vector2(79, 21)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/hover = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_de5pp")
theme_override_styles/focus = SubResource("StyleBoxFlat_de5pp")
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="Camera2D/QuitButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ieqqp")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/QuitButton"]
speed_scale = 4.0
libraries = {
"": SubResource("AnimationLibrary_diind")
}

[node name="Label" type="Label" parent="Camera2D"]
z_index = 100
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 249.0
offset_top = 240.0
offset_right = 527.0
offset_bottom = 266.0
grow_horizontal = 0
grow_vertical = 0
text = "Made by Adam Gallina for Mariam :)"
label_settings = SubResource("LabelSettings_irf0p")

[node name="NewGameWarning" type="NinePatchRect" parent="Camera2D"]
visible = false
z_index = 110
offset_left = -363.0
offset_top = 55.0
offset_right = 357.965
offset_bottom = 205.0
texture = ExtResource("3_ieqqp")
patch_margin_left = 43
patch_margin_right = 37

[node name="Label" type="Label" parent="Camera2D/NewGameWarning"]
layout_mode = 0
offset_left = -10.0
offset_top = 38.0
offset_right = 540.0
offset_bottom = 108.0
text = "Warning: Starting a new game will 
overwrite previous save data. Continue?"
label_settings = SubResource("LabelSettings_7sfhv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewButton" type="Button" parent="Camera2D/NewGameWarning"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.517
offset_top = -38.0
offset_right = 274.517
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.247059, 0.403922, 0.407843, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.392157, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_bn21j")
theme_override_styles/hover = SubResource("StyleBoxFlat_ds8ej")
theme_override_styles/pressed = SubResource("StyleBoxFlat_02x1q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xhnb0")
theme_override_styles/focus = SubResource("StyleBoxFlat_hmoqm")
text = "New Game"

[node name="TextureRect" type="NinePatchRect" parent="Camera2D/NewGameWarning/NewButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -2.5
offset_right = 249.495
offset_bottom = 74.1
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.355, 0.355)
texture = ExtResource("4_b6k4m")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="CancelButton" type="Button" parent="Camera2D/NewGameWarning"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.517
offset_top = 9.0
offset_right = 274.517
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.247059, 0.403922, 0.407843, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.392157, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_bn21j")
theme_override_styles/hover = SubResource("StyleBoxFlat_ds8ej")
theme_override_styles/pressed = SubResource("StyleBoxFlat_02x1q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xhnb0")
theme_override_styles/focus = SubResource("StyleBoxFlat_hmoqm")
text = "Never mind"

[node name="TextureRect" type="NinePatchRect" parent="Camera2D/NewGameWarning/CancelButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -2.5
offset_right = 249.495
offset_bottom = 74.1
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.355, 0.355)
texture = ExtResource("4_b6k4m")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="MainUI" parent="Camera2D" instance=ExtResource("4_s4rov")]
visible = false

[node name="Environment" type="Node2D" parent="."]

[node name="Path" type="Node2D" parent="Environment"]
position = Vector2(0, 29)
scale = Vector2(3, 1)

[node name="Pillar" parent="Environment/Path" instance=ExtResource("5_sv0kb")]

[node name="Pillar2" parent="Environment/Path" instance=ExtResource("5_sv0kb")]
position = Vector2(245.667, 0)

[node name="Pillar3" parent="Environment/Path" instance=ExtResource("5_sv0kb")]
position = Vector2(-245.667, 0)

[node name="Sprite2D" type="Sprite2D" parent="Environment/Path"]
position = Vector2(53.6667, 374)
texture = ExtResource("5_526l2")

[node name="Water" type="ParallaxBackground" parent="Environment"]
scroll_base_offset = Vector2(0, -260)

[node name="Wave3" parent="Environment/Water" instance=ExtResource("6_4nit6")]
modulate = Color(0.780392, 0.780392, 0.780392, 1)
z_index = -77
position = Vector2(0, 122)
motion_scale = Vector2(0.6, 0.75)
max_wave_offset = 4.0

[node name="Wave2" parent="Environment/Water" instance=ExtResource("6_4nit6")]
modulate = Color(0.878431, 0.878431, 0.878431, 1)
z_index = -76
position = Vector2(0, 143)
motion_scale = Vector2(0.7, 0.85)
max_wave_offset = 4.0
start_up = false

[node name="Wave" parent="Environment/Water" instance=ExtResource("6_4nit6")]
position = Vector2(0, 166)
motion_scale = Vector2(0.8, 0.95)
max_wave_offset = 4.0

[node name="Sky" type="ParallaxBackground" parent="Environment"]
layer = -128
script = SubResource("GDScript_3u6ko")
day_gradient = SubResource("Gradient_7v57w")
night_gradient = SubResource("Gradient_j1lg6")

[node name="Sky" type="ParallaxLayer" parent="Environment/Sky"]
z_index = -100
motion_scale = Vector2(0, 0)

[node name="TextureRect" type="TextureRect" parent="Environment/Sky/Sky"]
self_modulate = Color(0.356863, 0.486275, 0.933333, 1)
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("7_5euwb")

[node name="Sun" type="ParallaxLayer" parent="Environment/Sky"]
z_index = -80
motion_scale = Vector2(0.1, 0.3)
motion_offset = Vector2(0, -100)

[node name="Path2D" type="Path2D" parent="Environment/Sky/Sun"]
position = Vector2(576, 0)
curve = SubResource("Curve2D_pcspu")

[node name="PathFollow2D" type="PathFollow2D" parent="Environment/Sky/Sun/Path2D"]
position = Vector2(-800, 300)
rotation = 2.35619
progress = 1822.99

[node name="Sun" type="TextureRect" parent="Environment/Sky/Sun/Path2D/PathFollow2D"]
offset_right = 500.0
offset_bottom = 500.0
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_nnqvf")

[node name="Moon" type="TextureRect" parent="Environment/Sky/Sun/Path2D/PathFollow2D"]
visible = false
offset_right = 500.0
offset_bottom = 500.0
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_j3epq")

[node name="GeodeSpawner" parent="Environment" instance=ExtResource("10_a1o20")]
position = Vector2(97, 140)

[node name="Buildings" parent="." instance=ExtResource("11_bjy00")]
offset_left = 0.0
offset_top = 0.0
offset_right = 40.0
offset_bottom = 40.0

[node name="BuyButton" parent="Buildings" index="0"]
visible = false

[node name="Chute" parent="Buildings" instance=ExtResource("12_a7qww")]
position = Vector2(411, 0)
do_spawn_anims = false

[node name="CoinSlider" parent="Buildings/Chute" index="1"]
visible = false

[node name="UpgradeUI" parent="Buildings/Chute" index="3"]
visible = false

[node name="ProcessSpeed" parent="Buildings/Chute/UpgradeUI/Sign/Sidebar/ProcessSpeed" index="2"]
level = -5

[node name="PengCount" parent="Buildings/Chute/UpgradeUI/Sign/Sidebar/PengCount" index="2"]
level = 1

[node name="GeodeMine" parent="Buildings" node_paths=PackedStringArray("curr_stored") instance=ExtResource("13_br4a5")]
position = Vector2(-203, 0)
do_spawn_anims = false
curr_stored = [NodePath("../GeodeVals"), NodePath("../GeodeVals/GeodeVals"), NodePath("../GeodeVals/GeodeVals/GeodeVals"), NodePath("../GeodeVals/GeodeVals/GeodeVals/GeodeVals"), NodePath("../GeodeVals/GeodeVals/GeodeVals/GeodeVals/GeodeVals"), NodePath("../GeodeVals/GeodeVals/GeodeVals/GeodeVals/GeodeVals/GeodeVals")]

[node name="CountSlider" parent="Buildings/GeodeMine" index="1"]
visible = false

[node name="UpgradeUI" parent="Buildings/GeodeMine" index="3"]
visible = false

[node name="MineStorage" parent="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/MineStorage" index="2"]
level = 5000

[node name="PengCount" parent="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/PengCount" index="2"]
level = 3

[node name="PengCarry" parent="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/PengCarry" index="2"]
level = -1

[node name="GeodeVals" parent="Buildings" instance=ExtResource("14_31rgm")]
position = Vector2(1250, -143)

[node name="GeodeVals" parent="Buildings/GeodeVals" instance=ExtResource("14_31rgm")]
position = Vector2(1250, -143)

[node name="GeodeVals" parent="Buildings/GeodeVals/GeodeVals" instance=ExtResource("14_31rgm")]
position = Vector2(1250, -143)

[node name="GeodeVals" parent="Buildings/GeodeVals/GeodeVals/GeodeVals" instance=ExtResource("14_31rgm")]
position = Vector2(1250, -143)

[node name="GeodeVals" parent="Buildings/GeodeVals/GeodeVals/GeodeVals/GeodeVals" instance=ExtResource("14_31rgm")]
position = Vector2(1250, -143)

[node name="GeodeVals" parent="Buildings/GeodeVals/GeodeVals/GeodeVals/GeodeVals/GeodeVals" instance=ExtResource("14_31rgm")]
position = Vector2(1250, -143)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 100
position = Vector2(88, 76)
scale = Vector2(0.32492, 0.32492)
texture = ExtResource("15_54i4g")
offset = Vector2(-112.895, -163.06)
script = SubResource("GDScript_587t3")
max_rot = 3.0
rot_time = 2.0
min_scale = 0.3
max_scale = 0.35
scale_time = 2.0

[connection signal="mouse_entered" from="Camera2D/NewButton" to="Camera2D/NewButton/AnimationPlayer" method="play" binds= ["bounce_up"]]
[connection signal="mouse_exited" from="Camera2D/NewButton" to="Camera2D/NewButton/AnimationPlayer" method="play" binds= ["bounce_down"]]
[connection signal="pressed" from="Camera2D/NewButton" to="." method="new_game"]
[connection signal="mouse_entered" from="Camera2D/ContButton" to="Camera2D/ContButton/AnimationPlayer" method="play" binds= ["bounce_up"]]
[connection signal="mouse_exited" from="Camera2D/ContButton" to="Camera2D/ContButton/AnimationPlayer" method="play" binds= ["bounce_down"]]
[connection signal="pressed" from="Camera2D/ContButton" to="." method="load_game"]
[connection signal="mouse_entered" from="Camera2D/QuitButton" to="Camera2D/QuitButton/AnimationPlayer" method="play" binds= ["bounce_up"]]
[connection signal="mouse_exited" from="Camera2D/QuitButton" to="Camera2D/QuitButton/AnimationPlayer" method="play" binds= ["bounce_down"]]
[connection signal="pressed" from="Camera2D/QuitButton" to="." method="quit"]
[connection signal="pressed" from="Camera2D/NewGameWarning/NewButton" to="." method="restart_game"]
[connection signal="pressed" from="Camera2D/NewGameWarning/CancelButton" to="Camera2D/NewGameWarning" method="hide"]
[connection signal="on_upgrade_peng_count" from="Buildings/Chute/UpgradeUI" to="Buildings/Chute" method="on_upgrade_peng_count" flags=18]
[connection signal="on_upgrade_peng_count" from="Buildings/GeodeMine/UpgradeUI" to="Buildings/GeodeMine" method="on_upgrade_peng_count" flags=18]

[editable path="Buildings"]
[editable path="Buildings/Chute"]
[editable path="Buildings/Chute/UpgradeUI"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/UpgradeTier"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/ProcessSpeed"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/SellValue"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/GoldEfficiency"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/ClockSpeed"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/ClockValue"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/PengCount"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/PengSpeed"]
[editable path="Buildings/Chute/UpgradeUI/Sign/Sidebar/PengCarry"]
[editable path="Buildings/GeodeMine"]
[editable path="Buildings/GeodeMine/UpgradeUI"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/UpgradeTier"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/MineStorage"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/MaxDepth"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/BucketSpeed"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/PengCount"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/PengSpeed"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/PengCarry"]
[editable path="Buildings/GeodeMine/UpgradeUI/Sign/Sidebar/PengMineStrength"]
